applying styles part1

--- a/src/main/java/com/proyecto/vista/VentanaDashboard.form
+++ b/src/main/java/com/proyecto/vista/VentanaDashboard.form
@@ -49,12 +49,13 @@
               <Group type="102" attributes="0">
                   <Component id="menu" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
-                          <Component id="mensaje" min="-2" pref="389" max="-2" attributes="0"/>
-                      </Group>
                       <Component id="header" pref="930" max="32767" attributes="0"/>
                       <Component id="windowsContent" max="32767" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Component id="mensaje" min="-2" pref="544" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                      </Group>
                   </Group>
               </Group>
           </Group>
@@ -63,9 +64,9 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Component id="menu" alignment="0" pref="780" max="32767" attributes="0"/>
               <Group type="102" attributes="0">
-                  <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-                  <Component id="mensaje" min="-2" pref="26" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="mensaje" min="-2" pref="47" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="header" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
                   <Component id="windowsContent" max="32767" attributes="0"/>
