adding griding to all app tables

--- a/src/main/java/com/proyecto/vista/VentanaRegistroFactura.form
+++ b/src/main/java/com/proyecto/vista/VentanaRegistroFactura.form
@@ -352,6 +352,7 @@
                     <Column editable="true" title="Title 4" type="java.lang.Object"/>
                   </Table>
                 </Property>
+                <Property name="showGrid" type="boolean" value="true"/>
               </Properties>
             </Component>
           </SubComponents>
