--- a/src/main/java/com/proyecto/vista/VentanaDetalleExpedienteProveedor.form
+++ b/src/main/java/com/proyecto/vista/VentanaDetalleExpedienteProveedor.form
@@ -150,6 +150,7 @@
                     <Column editable="true" title="Title 4" type="java.lang.Object"/>
                   </Table>
                 </Property>
+                <Property name="showGrid" type="boolean" value="true"/>
               </Properties>
             </Component>
           </SubComponents>
